# axum-api

./: Cargo.toml  Shuttle.toml  migrations.sql
src/: api.rs  main.rs
