[package]
name = "pulko-test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.196", features = ["derive"] }
shuttle-axum = "0.37.0"
shuttle-runtime = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
tracing = "0.1.40"
